# OptimPP

./: .clang-format  .clang-tidy  .gitignore  .sonarcloud.properties  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  Jenkinsfile  Readme.md
Source/: CMakeLists.txt
Source/include/IO/: BaseIo.h  FileOdfIo.h  json_conversion.h
Source/include/base/: Comparable.h  Exception.h  ExitCode.h  MathOperators.h  matrix4.h  type.h  vector3.h
Source/include/mesh/: MeshElement.h  MeshManager.h  MeshNode.h
Source/source/: main.cpp
Source/source/IO/: FileOdfIo.cpp  json_conversion.cpp
Source/source/base/: MathOperators.cpp  matrix4.cpp  vector3.cpp
Source/source/mesh/: MeshElement.cpp  MeshManager.cpp  MeshNode.cpp
Test/: CMakeLists.txt  FileOdfIo_utest.cpp  MeshManager_utest.cpp  basefct_utest.cpp  matrix4_utest.cpp  vector3_utest.cpp
Test/GoogleTest/: CMakeLists.txt
Test/GoogleTest/googletest/: CMakeLists.txt
Test/UnitTests/: CMakeLists.txt  Exceptions_utest.cpp  FileOdfIo_utest.cpp  MathOperators_utest.cpp  MeshManager_utest.cpp  basefct_utest.cpp  matrix4_utest.cpp  vector3_utest.cpp
Tools/: BuildEngine.py  access_token.txt  gcovr.py
Tools/BuildEngine/: common.py  compile.py  documentation.py  generate.py  package.py  packaging.py  runtest.py  runtestcoverage.py
Tools/gcovr/: __init__.py  configuration.py  coverage.py  gcov.py  gcovr.py  utils.py  version.py  workers.py
Tools/gcovr/writer/: cobertura.py  coveralls.py  csv.py  html.py  json.py  sonarqube.py  summary.py  txt.py
cmake/: OptimConfig.cmake  OptimCoverageDefinitions.cmake  OptimCustomTargets.cmake  OptimDefinitions.cmake  OptimDocumentation.cmake  OptimFormatting.cmake  OptimSanitizersDefinitions.cmake  OptimTools.cmake  OptimsCXXFlags.cmake  c++-standards.cmake
doc/: CMakeLists.txt  Doxyfile
